--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,14 @@ name = "mirrors"
 version = "0.1.0"
 authors = ["Jeff Shen <jshen2014@hotmail.com>"]
 edition = "2018"
+description = "Generates an up-to-date list of currently active mirrors, ranked by speed."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
-tokio-timer = "*"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-rayon = "*"
-futures = "*"
-async-stream = "*"
+futures = "0.3"
+clap = "2"
