--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mirrors"
+name = "rmirrors"
 version = "0.1.0"
 authors = ["Jeff Shen <jshen2014@hotmail.com>"]
 edition = "2018"
@@ -14,3 +14,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 futures = "0.3"
 clap = "2"
+chrono = "0.4"
+
+[release.profile]
+lto = "fat"
+codegen-units = 1
